--- a/pandziak/css/style.css
+++ b/pandziak/css/style.css
@@ -97,3 +97,22 @@ div#ladowanie img {
     width: 10%;
     animation: szymon 500ms infinite forwards;
 }
+
+button {
+    display: block;
+    background-color: rgb(0, 0, 80);
+    color: white;
+    border: 0;
+    margin: auto;
+    margin-top: 0.75em;
+    padding: 1em 2em;
+    border-radius: 1em;
+}
+
+button:active {
+    background-color: rgb(0, 0, 100);
+}
+
+a {
+    color: gray;
+}
