--- a/pandziak/css/style.css
+++ b/pandziak/css/style.css
@@ -7,7 +7,7 @@ body {
     background-color: rgb(0, 0, 30);
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 @keyframes szymon {
@@ -107,6 +107,12 @@ button {
     margin-top: 0.75em;
     padding: 1em 2em;
     border-radius: 1em;
+}
+
+button#random {
+    position: absolute;
+    top: 0.25em;
+    left: 0.25em;
 }
 
 button:active {
